--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 .all-note-container {
-  width: 20%;
+  width: 300px;
   border-right: solid lightgray 1px;
   padding: 20px 10px 5px 10px;
   display: flex;
@@ -108,4 +108,34 @@
 svg {
   height: 1.6rem;
   width: 1.6rem;
+}
+
+.single-note {
+  border: solid 1px gray;
+  border-radius: 5px;
+  margin-top: 1.5rem;
+  height: 150px;
+}
+
+.title {
+  padding: 1rem 0 1rem 1.5rem;
+  font-size: 1.2rem;
+}
+
+.text {
+  padding: 1rem 0 1rem 1.5rem;
+  color: gray;
+}
+
+.time-stamp {
+  text-align: right;
+  padding-right: 1rem;
+  margin-top: 50px;
+  color: gray;
+}
+
+.note {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
