--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@
   width: 10%;
   padding-top: 20px;
   padding-right: 10px;
+  text-align: right;
 }
 
 .small-button {
@@ -138,4 +139,8 @@ svg {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.time {
+  font-size: 0.7rem;
 }
