--- a/style.css
+++ b/style.css
@@ -115,23 +115,24 @@ svg {
   border: solid 1px gray;
   border-radius: 5px;
   margin-top: 1.5rem;
-  height: 150px;
+  height: 130px;
+  /* width: 270px; */
 }
 
 .title {
-  padding: 1rem 0 1rem 1.5rem;
+  margin: 3rem 0 1rem 1.5rem;
   font-size: 1.2rem;
 }
 
 .text {
-  padding: 1rem 0 1rem 1.5rem;
+  padding: 2rem 0 1rem 1.5rem;
   color: gray;
 }
 
 .time-stamp {
   text-align: right;
   padding-right: 1rem;
-  margin-top: 50px;
+  margin-top: 30px;
   color: gray;
 }
 
@@ -139,6 +140,8 @@ svg {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  width: 270px;
+  padding-top: 1.2rem;
 }
 
 .time {
